# Thetis

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: notes.md
notebooks/: 01_eda.ipynb
src/data/: __init__.py  augment.py  episode_sampler.py  loader.py
tests/: conftest.py  test_data.py  test_episode_sampler.py
