[project]
name = "thetis"
version = "0.1.0"
description = "Research and implementation of spatio-temporal algorithms for tennis action recognition using the Thetis dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.2",
    "numpy>=1.26",
    "opencv-python>=4.8",
    "torch>=2.2",
]

[project.optional-dependencies]
fast = ["decord>=0.6"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pillow>=12.2.0",
    "pytest>=8",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
